k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: serverful-study
  labels:
    name: serverful-study
