k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serverful-study-service
  namespace: serverful-study
  labels:
    app: serverful-study
spec:
  selector:
    app: serverful-study
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
